<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="35dp"
                android:textColor="#ffffff"
                android:text="@string/almost"
                android:paddingBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="#ffffff"
                android:text="@string/Ty"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="#ffffff"
                android:text="@string/step"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="#ffffff"
                android:text="@string/to"
                android:paddingBottom="100dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Verify"
                android:text="@string/verify"
                android:textColor="#ffffff"
                android:textSize="18dp"
                android:background="@drawable/button"/>
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>